--- a/rekefood/index.html
+++ b/rekefood/index.html
@@ -3,52 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REKE FOOD - App Pedidos</title>
+    <title>REKE FOOD - App Oficial</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --vibras-naranja: #FF8C00; --vibras-negro: #1a1a1a; }
+        :root { --naranja: #FF8C00; --amarillo: #FFD700; --negro: #1a1a1a; }
         body {
             background-image: url('https://i.ibb.co/3ykX8kz/logo-vibras-positivas.png'); 
             background-attachment: fixed;
             background-position: center;
             background-repeat: no-repeat;
-            background-size: 80%;
+            background-size: 70%;
             background-color: rgba(255, 255, 255, 0.96);
             background-blend-mode: overlay;
         }
-        .bg-naranja { background-color: var(--vibras-naranja); }
-        .border-naranja { border-color: var(--vibras-naranja); }
-        .btn-cuenta {
-            position: fixed; bottom: 90px; right: 20px; z-index: 50;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+        .bg-naranja { background-color: var(--naranja); }
+        .text-naranja { color: var(--naranja); }
+        .cuenta-flotante {
+            position: fixed; bottom: 100px; right: 20px; z-index: 50;
+            background-color: var(--naranja); color: white;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3); border: 2px solid white;
         }
-        .btn-enviar {
-            position: fixed; bottom: 15px; left: 5%; width: 90%; z-index: 100;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.4);
+        .btn-enviar-pedido {
+            position: fixed; bottom: 20px; left: 5%; width: 90%; z-index: 100;
+            background-color: #25D366; box-shadow: 0 5px 20px rgba(0,0,0,0.4);
         }
     </style>
 </head>
 <body class="p-4 pb-40 max-w-xl mx-auto font-sans">
 
     <header class="text-center mb-6">
-        <img src="https://i.ibb.co/3ykX8kz/logo-vibras-positivas.png" alt="Vibras Positivas" class="h-16 mx-auto mb-2">
-        <h1 class="text-4xl font-black text-red-600 italic uppercase">REKE FOOD</h1>
-        <p class="text-[10px] font-bold text-gray-500 uppercase">Colinas del Portal | WhatsApp: 3207293667</p>
+        <img src="https://i.ibb.co/3ykX8kz/logo-vibras-positivas.png" alt="Vibras Positivas" class="h-20 mx-auto mb-2">
+        <h1 class="text-4xl font-black text-gray-900 italic uppercase">REKE FOOD</h1>
+        <p class="text-[11px] font-bold text-gray-500">Colinas del Portal | WhatsApp: 3207293667</p>
     </header>
 
-    <section class="bg-white p-5 rounded-2xl shadow-xl border-t-8 border-naranja mb-8">
-        <h2 class="font-bold text-gray-800 mb-4 flex items-center gap-2">📍 ENTREGA Y PAGO</h2>
+    <section class="bg-white p-5 rounded-2xl shadow-xl border-t-8 border-orange-500 mb-8">
+        <h2 class="font-bold text-gray-800 mb-4 flex items-center gap-2">📍 DATOS DE ENVÍO</h2>
         <div class="space-y-3">
-            <input type="text" id="nombre" placeholder="Nombre completo" class="w-full p-3 border rounded-xl outline-none">
+            <input type="text" id="nombre" placeholder="Nombre completo" class="w-full p-3 border rounded-xl outline-none focus:border-orange-500">
             <div class="flex gap-2">
-                <input type="text" id="direccion" placeholder="Dirección / Barrio" class="flex-1 p-3 border rounded-xl outline-none">
-                <button onclick="obtenerGPS()" class="bg-blue-600 text-white px-4 rounded-xl shadow active:scale-90">
-                    <i class="fas fa-location-dot"></i>
+                <input type="text" id="direccion" placeholder="Dirección exacta" class="flex-1 p-3 border rounded-xl outline-none focus:border-orange-500">
+                <button onclick="obtenerGPS()" class="bg-blue-600 text-white px-4 rounded-xl shadow active:scale-95">
+                    <i class="fas fa-location-arrow"></i>
                 </button>
             </div>
             <input type="hidden" id="gps_val">
-            <input type="tel" id="celular" placeholder="Celular" class="w-full p-3 border rounded-xl outline-none">
+            <input type="tel" id="celular" placeholder="Celular" class="w-full p-3 border rounded-xl outline-none focus:border-orange-500">
             <select id="pago" class="w-full p-3 border rounded-xl font-bold bg-gray-50">
                 <option value="Efectivo">Efectivo</option>
                 <option value="Nequi">Nequi</option>
@@ -56,96 +57,99 @@
             </select>
             <textarea id="obs" placeholder="Observaciones (ej. Sin cebolla, cambio de 50k)" class="w-full p-3 border rounded-xl h-20"></textarea>
         </div>
-        <div id="gps_status" class="hidden text-center text-blue-600 font-bold text-xs mt-2 italic">✅ GPS Vinculado</div>
+        <div id="gps_status" class="hidden text-center text-blue-600 font-bold text-xs mt-2 italic">✅ UBICACIÓN GPS VINCULADA</div>
     </section>
 
     <div id="lista-menu" class="space-y-6"></div>
 
-    <div id="btn-total" class="btn-cuenta bg-naranja text-white px-6 py-3 rounded-full font-black text-xl border-2 border-white">
-        TOTAL: $0
+    <div id="btn-total" class="cuenta-flotante px-6 py-3 rounded-full font-black text-xl">
+        CUENTA: $0
     </div>
 
-    <button onclick="enviarWhatsApp()" class="btn-enviar bg-green-600 text-white py-4 rounded-2xl font-black text-2xl flex items-center justify-center gap-3">
+    <button onclick="enviarWhatsApp()" class="btn-enviar-pedido text-white py-5 rounded-2xl font-black text-2xl flex items-center justify-center gap-3">
         <i class="fab fa-whatsapp"></i> ENVIAR PEDIDO
     </button>
 
-    <footer class="text-center mt-12 opacity-40 text-[9px] font-bold uppercase tracking-tighter">
-        Desarrollada por App Vibras Positivas © Derechos de Autor Reservados
+    <footer class="text-center mt-12 opacity-40 text-[9px] font-bold uppercase">
+        Desarrollada por App Vibras Positivas © Derechos de Autor
     </footer>
 
     <script>
-        // BASE DE DATOS FIEL A LAS IMÁGENES
-        const carta = {
-            "HAMBURGUESAS (CON PAPA Y GASEOSA)": [
-                { id: 1, n: "Sencilla", p: 12000 },
-                { id: 2, n: "Especial", p: 15000 },
-                { id: 3, n: "Súper Reke", p: 20000 },
-                { id: 4, n: "Doble Carne", p: 18000 },
-                { id: 5, n: "Hamburguesa Pollo", p: 14000 }
+        // DATA EXTRAÍDA 100% DEL ARCHIVO RFCARTA.XLS
+        const menuData = {
+            "HAMBURGUESAS": [
+                { id: 1, n: "Sencilla", p: 16000 },
+                { id: 2, n: "Especial", p: 22000 }
             ],
-            "PERROS CALIENTES": [
-                { id: 6, n: "Perro Sencillo", p: 9000 },
-                { id: 7, n: "Perro Especial", p: 13000 },
-                { id: 8, n: "Perro Suizo", p: 15000 },
-                { id: 9, n: "Perro Reke", p: 16000 }
+            "PLATOS ESPECIALES": [
+                { id: 3, n: "Chuzo de Pollo", p: 23000 },
+                { id: 4, n: "Arepa Especial", p: 18000 },
+                { id: 5, n: "Pechuga y Cerdo a la Plancha", p: 25000 },
+                { id: 6, n: "Patacón con Todo", p: 25000 }
             ],
             "SALCHIPAPAS": [
-                { id: 10, n: "Salchipapa Sencilla", p: 11000 },
-                { id: 11, n: "Salchipapa Especial", p: 17000 },
-                { id: 12, n: "Reke-Especial", p: 22000 },
-                { id: 13, n: "Salchipapa Familiar", p: 32000 }
+                { id: 7, n: "Salchipapa Personal", p: 18000 },
+                { id: 8, n: "Salchipapa Personal x2", p: 25000 },
+                { id: 9, n: "Salchipapa Personal x3", p: 35000 }
+            ],
+            "PICADAS": [
+                { id: 10, n: "Picada x 2 personas", p: 26000 },
+                { id: 11, n: "Picada x 3 personas", p: 36000 }
+            ],
+            "PERROS CALIENTES": [
+                { id: 12, n: "Perro Caliente Sencillo", p: 14000 },
+                { id: 13, n: "Perro Caliente Especial", p: 22000 }
             ],
             "ADICIONES": [
-                { id: 14, n: "Porción Papa Francesa", p: 6000 },
-                { id: 15, n: "Queso Extra", p: 3000 },
-                { id: 16, n: "Tocineta", p: 3500 },
-                { id: 17, n: "Carne / Pollo Extra", p: 5000 },
-                { id: 18, n: "Huevo Codorniz (x3)", p: 2000 }
+                { id: 14, n: "Adición de Papa", p: 6000 },
+                { id: 15, n: "Adición de Queso", p: 4000 },
+                { id: 16, n: "Adición de Tocineta", p: 5000 },
+                { id: 17, n: "Adición de Ranchera", p: 7000 },
+                { id: 18, n: "Adición de Butifarra", p: 3000 }
             ],
             "BEBIDAS": [
-                { id: 19, n: "Gaseosa 350ml", p: 3500 },
-                { id: 20, n: "Gaseosa 1.5L", p: 7000 },
-                { id: 21, n: "Jugo Hit", p: 3000 },
-                { id: 22, n: "Cerveza Corona/Club", p: 7000 },
-                { id: 23, n: "Limonada Natural", p: 5000 },
-                { id: 24, n: "Agua Botella", p: 2500 }
+                { id: 19, n: "Gaseosa Personal", p: 4000 },
+                { id: 20, n: "Gaseosa 1.5 L", p: 8000 },
+                { id: 21, n: "Jugo Hit", p: 5000 },
+                { id: 22, n: "Mr Tea", p: 5000 },
+                { id: 23, n: "Agua", p: 3000 }
             ]
         };
 
-        let pedido = {};
+        let carrito = {};
 
-        function cargar() {
-            let h = '';
-            for (let c in carta) {
-                h += `<h2 class="text-lg font-black bg-gray-900 text-white px-4 py-1 rounded-r-full inline-block mt-4 mb-3 border-l-4 border-naranja shadow">${c}</h2>`;
-                carta[c].forEach(i => {
-                    h += `
-                    <div class="bg-white p-4 rounded-xl shadow-md border-b-4 border-naranja flex justify-between items-center mb-3">
+        function renderMenu() {
+            let html = '';
+            for (let cat in menuData) {
+                html += `<h2 class="text-lg font-black bg-gray-900 text-white px-4 py-1 rounded-r-full inline-block mt-4 mb-3 border-l-8 border-orange-500 shadow-lg italic uppercase">${cat}</h2>`;
+                menuData[cat].forEach(i => {
+                    html += `
+                    <div class="bg-white p-4 rounded-xl shadow border-b-4 border-orange-400 flex justify-between items-center mb-3">
                         <div class="flex-1">
                             <h3 class="font-bold text-gray-800 uppercase text-xs">${i.n}</h3>
                             <p class="text-red-600 font-black text-lg">$${i.p.toLocaleString()}</p>
                         </div>
-                        <div class="flex items-center gap-3 bg-gray-50 p-2 rounded-xl">
-                            <button onclick="m(${i.id}, -1)" class="w-9 h-9 border rounded-lg font-bold bg-white shadow-sm">-</button>
-                            <span id="c-${i.id}" class="font-black text-xl w-6 text-center">0</span>
-                            <button onclick="m(${i.id}, 1)" class="w-9 h-9 bg-naranja text-white rounded-lg font-bold shadow-sm">+</button>
+                        <div class="flex items-center gap-3 bg-gray-100 p-2 rounded-xl">
+                            <button onclick="updateQty(${i.id}, -1)" class="w-9 h-9 border rounded-lg font-bold bg-white shadow-sm active:bg-gray-200">-</button>
+                            <span id="qty-${i.id}" class="font-black text-xl w-6 text-center">0</span>
+                            <button onclick="updateQty(${i.id}, 1)" class="w-9 h-9 bg-naranja text-white rounded-lg font-bold shadow-sm active:opacity-80">+</button>
                         </div>
                     </div>`;
                 });
             }
-            document.getElementById('lista-menu').innerHTML = h;
+            document.getElementById('lista-menu').innerHTML = html;
         }
 
-        function m(id, v) {
-            pedido[id] = (pedido[id] || 0) + v;
-            if (pedido[id] < 0) pedido[id] = 0;
-            document.getElementById(`c-${id}`).innerText = pedido[id];
+        function updateQty(id, val) {
+            carrito[id] = (carrito[id] || 0) + val;
+            if (carrito[id] < 0) carrito[id] = 0;
+            document.getElementById(`qty-${id}`).innerText = carrito[id];
             
-            let t = 0;
-            for (let c in carta) {
-                carta[c].forEach(i => t += (pedido[i.id] || 0) * i.p);
+            let total = 0;
+            for (let cat in menuData) {
+                menuData[cat].forEach(i => total += (carrito[i.id] || 0) * i.p);
             }
-            document.getElementById('btn-total').innerText = `TOTAL: $${t.toLocaleString()}`;
+            document.getElementById('btn-total').innerText = `CUENTA: $${total.toLocaleString()}`;
         }
 
         function obtenerGPS() {
@@ -153,17 +157,17 @@
                 navigator.geolocation.getCurrentPosition(p => {
                     document.getElementById('gps_val').value = `https://www.google.com/maps?q=${p.coords.latitude},${p.coords.longitude}`;
                     document.getElementById('gps_status').classList.remove('hidden');
-                    alert("📍 GPS OK");
-                });
+                    alert("📍 Ubicación GPS capturada con éxito.");
+                }, () => { alert("No se pudo obtener el GPS."); });
             }
         }
 
         function enviarWhatsApp() {
             const nom = document.getElementById('nombre').value;
             const dir = document.getElementById('direccion').value;
-            if(!nom || !dir) return alert("Por favor ingresa nombre y dirección.");
+            if(!nom || !dir) return alert("Por favor escribe tu Nombre y Dirección.");
 
-            let f = `*🍔 PEDIDO REKE FOOD - FACTURA* 🍔\n`;
+            let f = `*🍔 PEDIDO REKE FOOD* 🍔\n`;
             f += `----------------------------------\n`;
             f += `👤 *Cliente:* ${nom}\n`;
             f += `📍 *Dirección:* ${dir}\n`;
@@ -172,11 +176,11 @@
             f += `----------------------------------\n`;
 
             let t = 0;
-            for (let c in carta) {
-                carta[c].forEach(i => {
-                    if(pedido[i.id] > 0) {
-                        let sub = pedido[i.id] * i.p;
-                        f += `✅ ${pedido[i.id]}x ${i.n} - $${sub.toLocaleString()}\n`;
+            for (let cat in menuData) {
+                menuData[cat].forEach(i => {
+                    if(carrito[i.id] > 0) {
+                        let sub = carrito[i.id] * i.p;
+                        f += `✅ ${carrito[i.id]}x ${i.n} - $${sub.toLocaleString()}\n`;
                         t += sub;
                     }
                 });
@@ -193,7 +197,7 @@
             window.open(`https://wa.me/573207293667?text=${encodeURIComponent(f)}`, '_blank');
         }
 
-        cargar();
+        renderMenu();
     </script>
 </body>
 </html>
